[gd_scene load_steps=2 format=3 uid="uid://c5n8m4w7p2kxy"]

[ext_resource type="Script" path="res://scripts/DistanceWheel.gd" id="1_distance_wheel_script"]

[node name="DistanceWheel" type="Control"]
layout_mode = 3
anchors_preset = 0
custom_minimum_size = Vector2(80, 80)
script = ExtResource("1_distance_wheel_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2
alignment = 1

[node name="UpButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "▲"

[node name="DistanceLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = "0m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "▼"
